fixes and beta path. dont use!

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 # ============================================================
 # Hytale Server - Environment Configuration
 # ============================================================
-# Kopiere diese Datei zu .env und passe die Werte an
-# In Portainer: Diese Werte in "Environment Variables" setzen
+# LOKAL: Kopiere diese Datei zu .env und passe die Werte an
+# PORTAINER: Diese Werte direkt in "Environment Variables" setzen
+#            (NICHT als .env Datei hochladen!)
+#
+# Host-Pfade: /opt/hytale-beta/
 # ============================================================
 
 # ====================
